# w800btplus-for-linux

./: README.md  mkdocs.yml  pyproject.toml
w800btplus_for_linux/: audio_device.py
